misc/quiz/new/style.css
html, body, #main {
    margin: 0;
    padding: 0;
    font-family: "Ubuntu", sans-serif;
    background-color: #222;
}

.editoritem::-webkit-scrollbar {
    width: 10px;
    height: 10px;
}

.editoritem::-webkit-scrollbar-track {
    background: #222;
}

.editoritem::-webkit-scrollbar-thumb {
    background: #fff;
    border-radius: 100px;
    border: solid 3px #222;
}

    .editoritem::-webkit-scrollbar-thumb:hover {
        background: yellow;
    }

.editoritem::-webkit-scrollbar-corner {
    background: #222;
}

#container::-webkit-scrollbar {
    width: 10px;
    height: 10px;
}

#container::-webkit-scrollbar-track {
    background: #191c2e;
}

#container::-webkit-scrollbar-thumb {
    background: #fff;
    border-radius: 100px;
    border: solid 3px #191c2e;
}

#container::-webkit-scrollbar-thumb:hover {
    background: yellow;
}

#container::-webkit-scrollbar-corner {
    background: #191c2e;
}

#main {
    display: grid;
    grid-template-columns: 3fr 11fr;
    grid-template-rows: 100vh;
    height: 100vh; width: 100vw;
    overflow: hidden;
}

#container {
    background-color: #191c2e;
    box-shadow: black 0 0 50px;
    padding: 15px;
    overflow: auto;
}

.editoritem {
    text-align: center;
    height: 100vh;
    overflow: auto;
}

.containeritem {
    border-style: solid none solid;
    border-width: 2px;
    color: gray;
    border-color: darkgray;
    border-radius: 1000px;
    padding: 10px;
    font-size: 20px;
    font-weight: 500;
    background-color: #333;
    text-align: center;
    cursor: pointer;
    margin: 15px 0 5px 0;
    scale: 0.95;
    transition: 0.2s;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

    .containeritem:hover {
        scale: 1;
        background-color: #2d314b;
        color: white;
    }

.selected {
    color: white;
    border-color: lightblue;
    font-weight: 700;
    background-color: #2d314b;
    scale: 1;
}

.selected:hover {
    scale: 1.005;
}

#title {
    color: white;
    font-size: 25px;
    width: 100%;
    font-weight: 700;
    text-align: center;
    margin-bottom: 30px;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

#addquestion {
    background-color: #555;
    padding: 8px;
    font-size: 18px;
    margin: 25px auto 0 auto;
    color: #bbb;
    text-shadow: black 3px 3px 3px;
    width: fit-content;
    border-radius: 1000px;
    cursor: pointer;
    transition: 0.15s;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

#addquestion:hover {
    scale: 1.05;
    color: white;
}

#addquestion:active {
    scale: 1.1;
    color: #ffa;
    text-shadow: none;
}

.quickgrid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    padding: 25px;
    grid-gap: 20px;
}

.setting {
    padding: 0 20px;
}

.settingupper {
    display: flex;
    align-items: center;
}

.settingtag {
    color: white;
    font-size: 18px;
    margin-right: 10px;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.settinginput {
    flex-grow: 1;
    height: min-content;
    font-size: 18px;
    font-family: Ubuntu, sans-serif;
    background-color: #444;
    color: white;
    border: none;
    padding: 5px 10px;
    border-radius: 10px;
    box-shadow: #999 1px 1px 3px;
}

.settinginfo {
    font-size: 14px;
    color: #ccc;
    text-align: left;
    margin: 5px 0;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.deletable {
    display: flex;
}

.divider {
    background-color: #fff;
    width: 1px;
    margin-right: 9px;
    border:none;
}

.deletebutton {
    height: 20px;
    padding-right: 10px;
}

.containedtext {
    margin: 0;
    flex-grow: 1;
}

.choicer {
    display: flex;
    align-items: center;
    justify-content: space-around;
    width: 50%;
}

.hidden {
    display: none;
}

.edittitle {
    color: white;
    font-size: 50px;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

#answerchoice {
    display: flex;
    align-items: center;
    justify-content: space-around;
    color: white;
    font-size: 24px;
    padding: 0 10% 0 10%;
    font-weight: 500;
}

.radiobutton {
    height: 2em;
    width: 2em;
    border: solid 10px white;
    margin-right: 10px;
    cursor: pointer;
    transition: 0.2s;
    accent-color: black;
}

    .radiobutton:hover {
        scale: 1.1;
        accent-color: blue;
    }

#savequestion {
    font-family: Ubuntu, sans-serif;
    font-size: 28px;
    font-weight: 700;
    background-color: #555;
    border: solid #3a3 3px;
    border-radius: 1000px;
    color: white;
    padding: 10px 50px;
    cursor: pointer;
    transition: 0.2s;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

    #savequestion:hover {
        scale: 1.1;
        border: solid #0b0;
    }

    #savequestion:active {
        border: solid darkgreen 3px;
        box-shadow: white 0 0 10px, white 0 0 10px inset;
    }

.interfacetag {
    width: 97%;
    text-align: left;
    margin-left: 3%;
    color: white;
    font-size: 18px;
    margin-bottom: 0;
    text-decoration: underline white;
    text-underline-offset: 10px;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

#exportquizbutton {
    font-family: Ubuntu, sans-serif;
    font-size: 28px;
    font-weight: 700;
    background-color: yellow;
    border: solid darkslateblue 3px;
    border-radius: 1000px;
    color: black;
    padding: 10px 100px;
    cursor: pointer;
    transition: 0.2s;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

    #exportquizbutton:hover {
        scale: 1.1;
        border: solid lightblue;
        background-color: orangered;
        color: white;
    }

#exportquizbutton:active {
    border: solid red 3px;
    box-shadow: white 0 0 10px, white 0 0 10px inset;
}

#downloadinfo {
    color: #bbb;
}

#downloadinfolink {
    color: yellow;
    font-weight: 700;
}

#errorbox {
    width: 70%;
    height: 15%;
    padding: 10px;
    margin: 10px auto;
    background-color: #111;
    align-self: center;
    box-shadow: #888 2px 2px 5px, #555 2px 2px 10px inset;
    border-radius: 25px;
    color: red;
    font-weight: 700;
    font-size: 18px;
    overflow: auto;
    display: none;
    resize: vertical;
}

    #errorbox::-webkit-scrollbar {
        width: 10px;
        height: 10px;
    }

    #errorbox::-webkit-scrollbar-track {
        background: rgb(0,0,0,0);
    }

    #errorbox::-webkit-scrollbar-thumb {
        background: #fff;
        border-radius: 100px;
        border: solid 3px #111;
    }

        #errorbox::-webkit-scrollbar-thumb:hover {
            background: yellow;
        }

    #errorbox::-webkit-scrollbar-corner {
        background: #aaa;
    }


.mobileonly { display: none; }

@media(orientation: portrait){
    #main {
        grid-template-columns: 100vw;
        grid-template-rows: 30vh 70vh;
    }

    #title {grid-area: sitetitle}
    #settingsbutton {grid-area: settings}
    #exportquizbutton {grid-area: export}
    #addquestion {grid-area: new}
    #questions {grid-area: question;
                width: 100%; overflow-y: auto; height: 100%; overflow-x: hidden;
    }

    #container {
        padding: 30px;
        display: grid;
        grid-template-rows: repeat(4, auto);
        grid-template-columns: 1fr 1fr;
        grid-template-areas: "sitetitle question" "settings question" "export question" "new question";
            grid-gap: 20px;
    }

    .editoritem {
        height: 70vh;
    }

    .containeritem {
        border-width: 5px;
        padding:10px;
        font-size: 40px;
        display: flex; align-items: center; justify-content: center;
        margin: 0;
    }

    #title {
        font-size: 50px;
        margin-bottom: 0;
    }

    #addquestion {
        font-size: 35px;
        padding-left: 20px; padding-right: 20px;
        margin: 0 auto 0 auto;
        display: flex; align-items: center; justify-content: center;
    }

    .quickgrid {
        grid-template-columns: 1fr;
        padding: 40px;
        grid-gap: 40px;
    }

    .setting {
        padding: 0 30px;
    }

    .settingupper {
        flex-direction: column;
        padding-bottom: 25px;
    }

    .settingtag {
        font-size: 40px;
        margin-right: 0;
        width: 100%;
        text-align: left;
        margin-bottom: 15px;
    }

    .settinginput {
        width: calc(100% - 40px);
        font-size: 40px;
        padding: 10px 20px;
        border-radius: 25px;
        box-shadow: #999 2px 2px 5px;
    }

    .settinginfo {
        font-size: 20px;
        color: #ccc;
        text-align: left;
        margin: 5px 0;
    }

    .deletable {
        margin-top: 15px;
    }

    .divider {
        display: none;
    }

    .deletebutton {
        height:40px;
        padding-right: 15px;
    }

    .edittitle {
        font-size: 75px;
    }

    #answerchoice {
        font-size: 40px;
        padding: 0 10% 0 10%;
        font-weight: 500;
        flex-direction: column;
    }

    .choicer {
        width: 75%;
    }

    .radiobutton {
        height: 5em;
        width: 5em;
        margin-right: 15px;
    }

    label {
        font-size: 45px !important;
    }

    .mobileonly { display: block; }

    #savequestion {
        font-size: 70px;
        border: solid #3a3 10px;
        padding: 15px 75px;
    }

    .interfacetag {
        width: 95%;
        margin-left: 5%;
        font-size: 30px;
        text-underline-offset: 20px;
    }

    #exportquizbutton {
        font-size: 70px;
        border: solid darkslateblue 10px;
        padding: 15px 75px;
    }

    #errorbox {
        width: 90%;
        height: 40%;
        padding: 20px;
        margin: 25px auto;
        border-radius: 50px;
        font-size: 25px;
    }

        #errorbox br {
            content: "A" !important;
            display: block !important;
            margin-bottom: 15px !important;
        }
}

